--- a/pricing.html
+++ b/pricing.html
@@ -50,13 +50,13 @@
     </section>
 
       <section>
-        <div class="container px-5">
+        <div class="container px-5 p-5">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
                     <div class="p-2"><img class="img-fluid img-circle" src="images/karta podarunkowa_2014_taniec-siedlce.jpg" alt="..." /></div>
                 </div>
                 <div class="col-lg-5 order-lg-1">
-                    <div class="p-5">
+                    <div class="p-1">
                         <h2 class="display-4">Karta Podarunkowa</h2>
                         <p>Szukasz pomysłu na wyjątkowy prezent ? 
                           Chcesz sprawić przyjemność bliskiej osobie?  
