--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,9 @@
               <article class="col-12 col-lg-4">
                   <img height = "50px" width="50px" src="images/iconmonstr-phone-8-120.png" alt="ikonka" title="ikonka">
                   <h2 >Numer Kontaktowy</h2>
-                  <p style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-style: italic;"> 601 991 189 </p>
+                  <a  href="tel:601991189 " style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-style: italic; color: black; text-decoration: none;"> 
+                    601 991 189 
+                  </a>
 
               </article>
   
@@ -68,32 +70,35 @@
                   </p>
               </article>
 
-                <form action="">
+                <form action="POST" data-netlify="true">
                   <div class="half">
                     <div class="item">
                       <label for="name">IMIĘ</label>
-                      <input placeholder="Twoje Imię" type="text" id = "name">
+                      <input name="IMIĘ" placeholder="Twoje Imię" type="text" id = "first_name">
                     </div>
                     <div class="item">
-                      <label for="email">NAZWISKO</label>
-                      <input  placeholder="Twoje Nazwisko" type="text" id = "surname">
+                      <label for="surname">NAZWISKO</label>
+                      <input name="NAZWISKO" placeholder="Twoje Nazwisko" type="text" id = "surname">
                     </div>
                   </div>
                   <div class="half2">
                     <div class="item">
-                      <label for="email">TELEFON</label>
-                      <input  placeholder="Twój Numer Telefonu" type="text" id = "phone">
+                      <label for="phone">TELEFON</label>
+                      <input name="NUMER TELEFONU" placeholder="Twój Numer Telefonu" type="text" id = "phone">
                     </div>
                     <div class="item">
                       <label for="email">EMAIL</label>
-                      <input  placeholder="Twój E - MAIL" type="text" id = "email">
+                      <input name="EMAIL" placeholder="Twój E - MAIL" type="text" id = "email">
                     </div>
                   </div>
                   <div class="full">
                     <label for="message">WIADOMOŚĆ</label>
-                    <textarea  placeholder="Twoja Wiadomość" name="message" id = "message"></textarea>
+                    <textarea placeholder="Twoja Wiadomość" name="Wiadomość" id = "message"></textarea>
                   </div>
-                    <input class="btn btn-outline-dark" type="Submit" value = "Wyślij" name="Submit"></input>
+                  <div class="field">
+                    <div data-netlify-recaptcha="true" class="p-3 d-flex justify-content-center" style="text-align: center;"></div>
+                  </div>
+                    <input class="btn btn-outline-dark" type="submit" value = "Wyślij" name="Submit"></input>
                 </form>
           </div>
         </div>
