--- a/about.html
+++ b/about.html
@@ -24,7 +24,9 @@
           <li class="nav-item">
             <a  class="nav-link" href="index.html">Strona Główna</a>
           </li>
-
+          <li class="nav-item">
+            <a  class="nav-link" href="https://www.facebook.com/Taniec.Siedlce/">Aktualności</a>
+          </li>
           <li class="nav-item">
             <a  class="nav-link" href="about.html">O nas</a>
           </li>
