--- a/pricing.html
+++ b/pricing.html
@@ -24,6 +24,9 @@
                 <a  class="nav-link" href="index.html">Strona Główna</a>
               </li>
               <li class="nav-item">
+                <a  class="nav-link" href="https://www.facebook.com/Taniec.Siedlce/">Aktualności</a>
+              </li>
+              <li class="nav-item">
                 <a  class="nav-link" href="about.html">O nas</a>
               </li>
               <li class="nav-item">
