--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <img class="circle" src="images/14711298_10209072110792835_8288414450548212131_o.jpg" alt="photo" style="width: 450px;height:450px;;">
         <h1 class="display-2">Siedlecka Szkoła Tańca Towarzyskiego </h1>
         <h1 class="display-2 awesome_p">Marka Glinki</h1>
-        <a href="#services"><img class="display-6 arrow" src="images/arrowupsidedown.png" alt="arrow" style="width: 100px; height:100px;"></a>
+        <a href="#services"><img class="display-6 arrow" src="images/arrowupsidedown.png" alt="..." style="width: 100px; height:100px;"></a>
     </section>
     <br>
 
@@ -313,7 +313,7 @@
     <section id="propositions">
     <h1>Nie masz pomysłu na pierwszy taniec? - Doradzimy!</h1>
     <div class="buttonspotify">
-        <a href="https://www.youtube.com/playlist?list=PL9aeB_Gtt1gNIz7_GCaxNjIe3XCxZc4xP"><button type="button" class="btn btn-outline-light">Zobacz nasze propozycje!</button></a>
+        <a href="https://www.youtube.com/playlist?list=PL9aeB_Gtt1gPXwgtjm17vWXI1YyW0dWW4"><button type="button" class="btn btn-outline-light">Zobacz nasze propozycje!</button></a>
     </div>
 
     </section>
@@ -337,7 +337,7 @@
                                     pokazywał naszą miłość i była w nim chemia. Uczyliśmy się wczesniej u konkurencji,  
                                     nie będę wymieniał nazwiska (nie podobało nam się) ale Marek jest mistrzem w okolicy 
                                     cieszymy się że własnie do niego trafilismy za drugim razem. Polecamy wszystkim tym którzy 
-                                    chcą mieć coś wyjątkowego. Dziękujemy Marek
+                                    chcą mieć coś wyjątkowego. Dziękujemy Marek <br>
                                 </p>
                                 <figcaption class="blockquote-footer mt-3  fs-5"><cite>Arek Wąsowski</cite></figcaption>
                             </div>
@@ -348,7 +348,7 @@
                                 <p class="fs-5">
                                     Wraz z mężem uczestniczyliśmy w zajęciach tańca u Marka. 
                                     W czerwcu zakończyliśmy naszą przygodę, ale tylko na okres wakacji. 
-                                    Zamierzamy z powrotem wrócić na jesieni. Marek jest śwenym człowiekiem i nauczycielem. 
+                                    Zamierzamy z powrotem wrócić na jesieni. Marek jest świetnym człowiekiem i nauczycielem. 
                                     Zajęcia z Nim to sama przyjemność. Sympatyczny, dowcipny i przede wszystkim człowiek o 
                                     wysokiej kulturze osobistej. Jeżeli chodzi o umiejętności dydaktyczne to Mistrz nad Mistrzami. 
                                     Dziękujemy Marku za Twoją pracę. Czas spędzony z Tobą podczas zajęć to sama przyjemność. 
@@ -361,7 +361,8 @@
                             <div class="slider-caption mt-3">
                                 <p class="fs-5">Niesamowite podejście do człowieka. Zajęcia latino solo prowadzone z dużym poczuciem humoru i luzu, 
                                     ale mega profesjonalnie z dbałością o szczegóły. Polecam każdemu zajęcia latino solo tym bardziej, 
-                                    że z takim nietuzinkowym i wspaniałym instruktorem. <br> . </p>
+                                    że z takim nietuzinkowym i wspaniałym instruktorem.  <br><br><br><br>
+                                </p>
                                 <br>
                                 <br>
                                 <figcaption class="blockquote-footer mt-3 fs-5"><cite>Ewa Suchożebrska</cite></figcaption>
@@ -380,11 +381,11 @@
             </div>
             <p></p>
             <div class="moreopinions text-center">
-                <a href="https://www.facebook.com/Taniec.Siedlce/reviews"><button type="button" class="btn btn-outline-dark">Więcej Opinii</button></a>
+                <a href="https://siedlecka-szkola-tanca-towarzyskiego-marka-glinki.oferteo.pl/"><button type="button" class="btn btn-outline-dark">Więcej Opinii</button></a>
             </div>
         </div>
     </section>
-    <section class="p-1" id="gift">
+    <section id="gift" class="p-1">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 order-lg-2">
