--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
   <section class="py-5">
       <div class="container px-5 my-5">
           <div class="row gx-5 align-items-center">
-              <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="images/IMG_8119.jpg" alt="..." /></div>
+              <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="images/paz.jpg" alt="..." /></div>
               <div class="col-lg-6">
                   <h2>Tancerz, choreograf, dyplomowany instruktor tańca towarzyskiego, pedagog</h2>
                   <p class="lead fw-normal text-muted mb-0">
