--- a/404.html
+++ b/404.html
@@ -16,9 +16,11 @@
         <div class="container" style="display: flex; align-items: center; justify-content: center; justify-items: center; flex-direction: column; padding: 100px;">
             <img style="text-align:  center; justify-content:center;"; src="images/dancing-person.gif" alt="dancingGIF">
             <h2 class="text-center text-uppercase">404</h2>
+            <br>
             <h3 class="text-center text-uppercase">nie ma takiego tańca</h3>
             <p class="text-center w-75 m-auto"> Ani strony :(</p>
-            <a href="index.html">Powrót</a>
+            <br>
+            <a class="btn btn-outline-dark" href="index.html">Powrót</a>
         </div>
     </section>
 </body>
