--- a/about.html
+++ b/about.html
@@ -31,15 +31,21 @@
             <a  class="nav-link" href="about.html">O nas</a>
           </li>
           <li class="nav-item">
-            <a id="delink" class="nav-link" href="pricing.html">Cennik | Karta Podarunkowa</a>
+            <a id="delink" class="nav-link" href="pricing.html">Cennik</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Kontakt | Zapisy</a>
+            <a id="delink" class="nav-link" href="pricing.html">Karta Podarunkowa</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Kontakt</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Zapisy</a>
           </li>
         </ul>
       </div>
     </div>
-    </nav>
+</nav>
 
     <header class="py-5">
       <div class="container px-5">
