--- a/index.html
+++ b/index.html
@@ -32,10 +32,16 @@
                 <a  class="nav-link" href="about.html">O nas</a>
               </li>
               <li class="nav-item">
-                <a id="delink" class="nav-link" href="pricing.html">Cennik | Karta Podarunkowa</a>
+                <a id="delink" class="nav-link" href="pricing.html">Cennik</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Kontakt | Zapisy</a>
+                <a id="delink" class="nav-link" href="pricing.html">Karta Podarunkowa</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Kontakt</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Zapisy</a>
               </li>
             </ul>
           </div>
@@ -357,17 +363,6 @@
                                 <figcaption class="blockquote-footer mt-3  fs-5"><cite>Dorota Borkowska-Golec</cite></figcaption>
                             </div>
                         </div>
-                        <div class="carousel-item" data-bs-interval="10000">
-                            <div class="slider-caption mt-3">
-                                <p class="fs-5">Niesamowite podejście do człowieka. Zajęcia latino solo prowadzone z dużym poczuciem humoru i luzu, 
-                                    ale mega profesjonalnie z dbałością o szczegóły. Polecam każdemu zajęcia latino solo tym bardziej, 
-                                    że z takim nietuzinkowym i wspaniałym instruktorem.  <br><br><br><br>
-                                </p>
-                                <br>
-                                <br>
-                                <figcaption class="blockquote-footer mt-3 fs-5"><cite>Ewa Suchożebrska</cite></figcaption>
-                            </div>
-                        </div>
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
@@ -394,10 +389,10 @@
                 <div class="col-lg-5 order-lg-1">
                     <div class="p-5">
                         <h2 class="display-4">Karta Podarunkowa</h2>
-                        <p>Szukasz pomysłu na wyjątkowy prezent ? 
+                        <p>Szukasz pomysłu na wyjątkowy prezent? 
                           Chcesz sprawić przyjemność bliskiej osobie?  
                           Karta Podarunkowa dostarczy wiele emocji dla Ciebie i Twoich bliskich!
-                          </p>
+                        </p>
                         <p>Karta Podarunkowa to oryginalny prezent „zapakowany” w elegancki sposób. Z pewnością dostarczy wiele przyjemności i wyzwoli emocje. Być może to właśnie jest marzeniem osoby, której chcesz sprawić prezent. Obdarowana osoba może skorzystać z dowolnego kursu lub lekcji indywidualnych. </p>
                     </div>
                 </div>
@@ -429,7 +424,7 @@
             <a class="btn btn-outline-dark btn-floating m-1" href="https://www.instagram.com/taniec_siedlce/" role="button"><img alt="icon-insta" src="images/instagram.png"></img></a>
           </section>
         <div class="bg-dark text-center" style="background-color: rgba(0, 0, 0, 0.2);">
-          <p class="p-3">© <span class="footer__year"></span> GlinkaArt | Projekt: <a href="https://jakubradomyski.me/" class="btn btn-outline-light">JR</a></p>
+          <p class="p-3">© <span class="footer__year"></span> GlinkaArt | <a href="https://jakubradomyski.me/" class="text-light btn-outline-light">JR</a></p>
         </div>
     </footer>
 
