--- a/contact.html
+++ b/contact.html
@@ -12,32 +12,38 @@
     <link rel="icon" type="image/png" href="images/ikona.png">
 </head>
 <body>
-    <nav id="nav" class="navbar navbar-expand-lg navbar-light bg-lightg">
-        <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"><img src="" alt=""></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a  class="nav-link" href="index.html">Strona Główna</a>
-              </li>
-              <li class="nav-item">
-                <a  class="nav-link" href="https://www.facebook.com/Taniec.Siedlce/">Aktualności</a>
-              </li>
-              <li class="nav-item">
-                <a  class="nav-link" href="about.html">O nas</a>
-              </li>
-              <li class="nav-item">
-                <a id="delink" class="nav-link" href="pricing.html">Cennik | Karta Podarunkowa</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Kontakt | Zapisy</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-    </nav>
+  <nav id="nav" class="navbar navbar-expand-lg navbar-light bg-lightg">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"><img src="" alt=""></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a  class="nav-link" href="index.html">Strona Główna</a>
+          </li>
+          <li class="nav-item">
+            <a  class="nav-link" href="https://www.facebook.com/Taniec.Siedlce/">Aktualności</a>
+          </li>
+          <li class="nav-item">
+            <a  class="nav-link" href="about.html">O nas</a>
+          </li>
+          <li class="nav-item">
+            <a id="delink" class="nav-link" href="pricing.html">Cennik</a>
+          </li>
+          <li class="nav-item">
+            <a id="delink" class="nav-link" href="pricing.html">Karta Podarunkowa</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Kontakt</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Zapisy</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+</nav>
 
     <section id="contact">
         <div class="container">
