Cennik/Grafik button texts change

--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,9 @@
             <a id="delink" class="nav-link" href="pricing.html">Cennik</a>
           </li>
           <li class="nav-item">
+            <a id="delink" class="nav-link" href="pricing.html">Grafik</a>
+          </li>
+          <li class="nav-item">
             <a id="delink" class="nav-link" href="pricing.html">Karta Podarunkowa</a>
           </li>
           <li class="nav-item">
