--- a/pricing.html
+++ b/pricing.html
@@ -33,6 +33,9 @@
             <a id="delink" class="nav-link" href="pricing.html">Cennik</a>
           </li>
           <li class="nav-item">
+            <a id="delink" class="nav-link" href="pricing.html">Grafik</a>
+          </li>
+          <li class="nav-item">
             <a id="delink" class="nav-link" href="pricing.html">Karta Podarunkowa</a>
           </li>
           <li class="nav-item">
@@ -47,14 +50,14 @@
 </nav>
 
     <header class="p-5">
-      <h1 class="display-3 text-center">Cennik</h1>
+      <h1 class="display-3 text-center">Cennik i grafik</h1>
       <p class="display-5 text-muted text-center">Tutaj znajdziesz naszą ofertę</p>
     </header>
 
     <section id="propositions">
       <h1>Sprawdź nasze ceny!</h1>
       <div class="buttonspotify">
-          <a href="https://docs.google.com/document/d/1WVXSFIjizKTK9y2MOPz182KBi6vnJfx2UXPr2FgjtOA/edit?usp=sharing"><button type="button" class="btn btn-outline-light">Pobierz Cennik </button></a>
+          <a href="https://docs.google.com/document/d/1WVXSFIjizKTK9y2MOPz182KBi6vnJfx2UXPr2FgjtOA/edit?usp=sharing"><button type="button" class="btn btn-outline-light">Pobierz Cennik/Grafik</button></a>
       </div>
     </section>
 
