--- a/about.html
+++ b/about.html
@@ -34,6 +34,9 @@
             <a id="delink" class="nav-link" href="pricing.html">Cennik</a>
           </li>
           <li class="nav-item">
+            <a id="delink" class="nav-link" href="pricing.html">Grafik</a>
+          </li>
+          <li class="nav-item">
             <a id="delink" class="nav-link" href="pricing.html">Karta Podarunkowa</a>
           </li>
           <li class="nav-item">
