--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                 <a id="delink" class="nav-link" href="pricing.html">Cennik</a>
               </li>
               <li class="nav-item">
+                <a id="delink" class="nav-link" href="pricing.html">Grafik</a>
+              </li>
+              <li class="nav-item">
                 <a id="delink" class="nav-link" href="pricing.html">Karta Podarunkowa</a>
               </li>
               <li class="nav-item">
@@ -49,7 +52,7 @@
     </nav>
 
     <section id="glinkaart">
-        <img class="circle" src="images/14711298_10209072110792835_8288414450548212131_o.jpg" alt="photo" style="width: 450px;height:450px;;">
+        <img class="circle" src="images/14711298_10209072110792835_8288414450548212131_o.jpg" alt="photo" style="width: 450px;height:450px;">
         <h1 class="display-2">Siedlecka Szkoła Tańca Towarzyskiego </h1>
         <h1 class="display-2 awesome_p">Marka Glinki</h1>
         <a href="#services"><img class="display-6 arrow" src="images/arrowupsidedown.png" alt="..." style="width: 100px; height:100px;"></a>
@@ -89,7 +92,7 @@
                         <p class="text-muted mt-3 mb-0">Nasza oferta jest najlepsza w mieście. Gwarantujemy najwyższy poziom nauczania! </p>
                         <br>
                         <div class="mt-3">
-                            <a href="pricing.html" class="text-custom">Cennik<i class="mdi mdi-chevron-right"></i></a>
+                            <a href="pricing.html" class="text-custom">Cennik/Grafik<i class="mdi mdi-chevron-right"></i></a>
                         </div>
                     </div>
                 </div>
