glinkaart img opt for mobiles

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </nav>
 
     <section id="glinkaart">
-        <img class="circle" src="images/14711298_10209072110792835_8288414450548212131_o.jpg" alt="photo" style="width: 450px;height:450px;">
+        <img class="circle" src="images/14711298_10209072110792835_8288414450548212131_o.jpg" alt="photo" >
         <h1 class="display-2">Siedlecka Szkoła Tańca Towarzyskiego </h1>
         <h1 class="display-2 awesome_p">Marka Glinki</h1>
         <a href="#services"><img class="display-6 arrow" src="images/arrowupsidedown.png" alt="..." style="width: 100px; height:100px;"></a>
