Changing app structure

--- a/pages/about.html
+++ b/pages/about.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <title>Siedlecka Szkoła Tańca Towarzyskiego</title>
     <meta name="description" content="Okres naszej działalności rozpoczął się w 1997. Zapraszamy, jeżeli usługi, których szukasz to taniec użytkowy, towarzyski, latino, disco w parach, bachata, salsa, zajęcia taneczne dla dzieci, młodzieży i dorosłych - dla par i singli w różnym stopniu zaawansowania.">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/png" href="images/ikona.png">
+    <link rel="icon" type="image/png" href="../images/ikona.png">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a  class="nav-link" href="index.html">Strona Główna</a>
+            <a  class="nav-link" href="../index.html">Strona Główna</a>
           </li>
           <li class="nav-item">
             <a  class="nav-link" href="https://www.facebook.com/Taniec.Siedlce/">Aktualności</a>
@@ -72,7 +72,7 @@
   <section class="py-5 bg-light" id="scroll-target">
       <div class="container px-5 my-5">
           <div class="row gx-5 align-items-center">
-              <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="images/IMG_8109.jpg" alt="..." /></div>
+              <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="../images/IMG_8109.jpg" alt="..." /></div>
               <div class="col-lg-6">
                   <h2>Marek Glinka</h2>
                   <p class="lead fw-normal text-muted mb-0">
@@ -92,7 +92,7 @@
   <section class="py-5">
       <div class="container px-5 my-5">
           <div class="row gx-5 align-items-center">
-              <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="images/paz.jpg" alt="..." /></div>
+              <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="../images/paz.jpg" alt="..." /></div>
               <div class="col-lg-6">
                   <h2>Tancerz, choreograf, dyplomowany instruktor tańca towarzyskiego, pedagog</h2>
                   <p class="lead fw-normal text-muted mb-0">
@@ -113,7 +113,7 @@
   <section class="py-5 bg-light" id="scroll-target">
       <div class="container px-5 my-5">
           <div class="row gx-5 align-items-center">
-              <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="images/IMG_8138.jpg" alt="..." /></div>
+              <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="../images/IMG_8138.jpg" alt="..." /></div>
               <div class="col-lg-6">
                   <h2>Anna Glinka</h2>
                   <p class="lead fw-normal text-muted mb-0">
@@ -132,7 +132,7 @@
   <section class="py-5">
       <div class="container px-5 my-5">
           <div class="row gx-5 align-items-center">
-              <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="images/IMG_8154 kopia.jpg" alt="..." /></div>
+              <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="../images/IMG_8154%20kopia.jpg" alt="..." /></div>
               <div class="col-lg-6">
                   <h2>Tancerka, wokalistka, aktorka musicalowa, pasjonatka tańca latynoamerykańskiego, tłumacz języka angielskiego.</h2>
                   <p class="lead fw-normal text-muted mb-0">
@@ -149,9 +149,9 @@
   <footer class="text-center text-white" style="background-color:white;">
     <div class="container p-4">
       <section class="mb-4">
-        <a class="btn btn-outline-dark btn-floating m-1" href="https://www.youtube.com/c/MarekGlinka" role="button"><img alt="icon-yt" src="images/yt.png"></img></i></a>
-        <a class="btn btn-outline-dark btn-floating m-1" href="https://www.facebook.com/Taniec.Siedlce/" role="button"><img alt="icon-fb" src="images/facebook.png"></img></a>
-        <a class="btn btn-outline-dark btn-floating m-1" href="https://www.instagram.com/taniec_siedlce/" role="button"><img alt="icon-insta" src="images/instagram.png"></img></a>
+        <a class="btn btn-outline-dark btn-floating m-1" href="https://www.youtube.com/c/MarekGlinka" role="button"><img alt="icon-yt" src="../images/yt.png"></img></i></a>
+        <a class="btn btn-outline-dark btn-floating m-1" href="https://www.facebook.com/Taniec.Siedlce/" role="button"><img alt="icon-fb" src="../images/facebook.png"></img></a>
+        <a class="btn btn-outline-dark btn-floating m-1" href="https://www.instagram.com/taniec_siedlce/" role="button"><img alt="icon-insta" src="../images/instagram.png"></img></a>
       </section>
     <div class="bg-dark text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       <p>© GlinkaArt</p>
