--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -7,10 +7,10 @@
     <title>Siedlecka Szkoła Tańca Towarzyskiego</title>
     <meta name="description" content="main">
     <meta name="description" content="Tutaj znajdziesz naszą ofertę. - Nie zapomnij o karcie podarunkowej!">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/png" href="images/ikona.png">
+    <link rel="icon" type="image/png" href="../images/ikona.png">
 </head>
 <body>
   <nav id="nav" class="navbar navbar-expand-lg navbar-light bg-lightg">
@@ -21,7 +21,7 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a  class="nav-link" href="index.html">Strona Główna</a>
+            <a  class="nav-link" href="../index.html">Strona Główna</a>
           </li>
           <li class="nav-item">
             <a  class="nav-link" href="https://www.facebook.com/Taniec.Siedlce/">Aktualności</a>
@@ -65,7 +65,7 @@
         <div class="container px-5 p-5">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <div class="p-2"><img class="img-fluid img-circle" src="images/karta podarunkowa_2014_taniec-siedlce.jpg" alt="..." /></div>
+                    <div class="p-2"><img class="img-fluid img-circle" src="../images/karta%20podarunkowa_2014_taniec-siedlce.jpg" alt="..." /></div>
                 </div>
                 <div class="col-lg-5 order-lg-1">
                     <div class="p-1">
@@ -84,9 +84,9 @@
       <footer class="text-center text-white" style="background-color:white;">
         <div class="container p-4">
           <section class="mb-4">
-            <a class="btn btn-outline-dark btn-floating m-1" href="https://www.youtube.com/c/MarekGlinka" role="button"><img alt="icon-yt" src="images/yt.png"></img></i></a>
-            <a class="btn btn-outline-dark btn-floating m-1" href="https://www.facebook.com/Taniec.Siedlce/" role="button"><img alt="icon-fb" src="images/facebook.png"></img></a>
-            <a class="btn btn-outline-dark btn-floating m-1" href="https://www.instagram.com/taniec_siedlce/" role="button"><img alt="icon-insta" src="images/instagram.png"></img></a>
+            <a class="btn btn-outline-dark btn-floating m-1" href="https://www.youtube.com/c/MarekGlinka" role="button"><img alt="icon-yt" src="../images/yt.png"></img></i></a>
+            <a class="btn btn-outline-dark btn-floating m-1" href="https://www.facebook.com/Taniec.Siedlce/" role="button"><img alt="icon-fb" src="../images/facebook.png"></img></a>
+            <a class="btn btn-outline-dark btn-floating m-1" href="https://www.instagram.com/taniec_siedlce/" role="button"><img alt="icon-insta" src="../images/instagram.png"></img></a>
           </section>
         <div class="bg-dark text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
           <p>© GlinkaArt</p>
