App-structure rollback

--- a/index.html
+++ b/index.html
@@ -29,22 +29,22 @@
                 <a  class="nav-link" href="https://www.facebook.com/Taniec.Siedlce/">Aktualności</a>
               </li>
               <li class="nav-item">
-                <a  class="nav-link" href="pages/about.html">O nas</a>
+                <a  class="nav-link" href="about.html">O nas</a>
               </li>
               <li class="nav-item">
-                <a id="delink" class="nav-link" href="pages/pricing.html">Cennik</a>
+                <a id="delink" class="nav-link" href="pricing.html">Cennik</a>
               </li>
               <li class="nav-item">
-                <a id="delink" class="nav-link" href="pages/pricing.html">Grafik</a>
+                <a id="delink" class="nav-link" href="pricing.html">Grafik</a>
               </li>
               <li class="nav-item">
-                <a id="delink" class="nav-link" href="pages/pricing.html">Karta Podarunkowa</a>
+                <a id="delink" class="nav-link" href="pricing.html">Karta Podarunkowa</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="pages/contact.html">Kontakt</a>
+                <a class="nav-link" href="contact.html">Kontakt</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="pages/contact.html">Zapisy</a>
+                <a class="nav-link" href="contact.html">Zapisy</a>
               </li>
             </ul>
           </div>
@@ -92,7 +92,7 @@
                         <p class="text-muted mt-3 mb-0">Nasza oferta jest najlepsza w mieście. Gwarantujemy najwyższy poziom nauczania! </p>
                         <br>
                         <div class="mt-3">
-                            <a href="pages/pricing.html" class="text-custom">Cennik/Grafik<i class="mdi mdi-chevron-right"></i></a>
+                            <a href="pricing.html" class="text-custom">Cennik/Grafik<i class="mdi mdi-chevron-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                         </p>
                         <br>
                         <div class="mt-3">
-                            <a href="pages/contact.html" class="text-custom">Zapisy<i class="mdi mdi-chevron-right"></i></a>
+                            <a href="contact.html" class="text-custom">Zapisy<i class="mdi mdi-chevron-right"></i></a>
                         </div>
                     </div>
 
