--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <title>Siedlecka Szkoła Tańca Towarzyskiego</title>
     <meta name="description" content="Skontaktuj się z nami i zapisz się na kurs!">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/png" href="../images/ikona.png">
+    <link rel="icon" type="image/png" href="images/ikona.png">
 </head>
 <body>
   <nav id="nav" class="navbar navbar-expand-lg navbar-light bg-lightg">
@@ -20,7 +20,7 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a  class="nav-link" href="../index.html">Strona Główna</a>
+            <a  class="nav-link" href="index.html">Strona Główna</a>
           </li>
           <li class="nav-item">
             <a  class="nav-link" href="https://www.facebook.com/Taniec.Siedlce/">Aktualności</a>
@@ -55,7 +55,7 @@
             <p class="text-center w-75 m-auto"></p>
             <div id = "details" class="row" style="text-decoration: italic;">
               <article class="col-12 col-lg-4">
-                  <img height = "50px" width="50px" src="../images/iconmonstr-phone-8-120.png" alt="ikonka" title="ikonka">
+                  <img height = "50px" width="50px" src="images/iconmonstr-phone-8-120.png" alt="ikonka" title="ikonka">
                   <h2 >Numer Kontaktowy</h2>
                   <a  href="tel:601991189 " style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-style: italic; color: black; text-decoration: none;"> 
                     601 991 189 
@@ -64,7 +64,7 @@
               </article>
   
               <article class="col-12 col-lg-4">
-                  <img height = "50px" width="50px" src="../images/iconmonstr-paper-plane-7-120.png" alt="ikonka" title="ikonka">
+                  <img height = "50px" width="50px" src="images/iconmonstr-paper-plane-7-120.png" alt="ikonka" title="ikonka">
                   <h2>E - MAIL</h2>
                   <p style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-style: italic;">
                      taniecsiedlce@gmail.com
@@ -72,7 +72,7 @@
               </article>
   
               <article class="col-12 col-lg-4">
-                  <img height = "50px" width="50px" src="../images/iconmonstr-navigation-9-120.png" alt="ikonka" title="ikonka">
+                  <img height = "50px" width="50px" src="images/iconmonstr-navigation-9-120.png" alt="ikonka" title="ikonka">
                   <h2>Adres</h2>
                   <p style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-style: italic;">
                     Siedlce, DH Olimp, ul. Sokołowska 47, III piętro,<br>
@@ -117,9 +117,9 @@
      <footer class="text-center text-white" style="background-color:white;">
       <div class="container p-4">
         <section class="mb-4">
-          <a class="btn btn-outline-dark btn-floating m-1" href="https://www.youtube.com/c/MarekGlinka" role="button"><img alt="icon-yt" src="../images/yt.png"></img></i></a>
-          <a class="btn btn-outline-dark btn-floating m-1" href="https://www.facebook.com/Taniec.Siedlce/" role="button"><img alt="icon-fb" src="../images/facebook.png"></img></a>
-          <a class="btn btn-outline-dark btn-floating m-1" href="https://www.instagram.com/taniec_siedlce/" role="button"><img alt="icon-insta" src="../images/instagram.png"></img></a>
+          <a class="btn btn-outline-dark btn-floating m-1" href="https://www.youtube.com/c/MarekGlinka" role="button"><img alt="icon-yt" src="images/yt.png"></img></i></a>
+          <a class="btn btn-outline-dark btn-floating m-1" href="https://www.facebook.com/Taniec.Siedlce/" role="button"><img alt="icon-fb" src="images/facebook.png"></img></a>
+          <a class="btn btn-outline-dark btn-floating m-1" href="https://www.instagram.com/taniec_siedlce/" role="button"><img alt="icon-insta" src="images/instagram.png"></img></a>
         </section>
       <div class="bg-dark text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
         <p>© GlinkaArt</p>
