Hamburger-Menu addon

--- a/blog.html
+++ b/blog.html
@@ -14,10 +14,13 @@
     <section id="contact">
         <div class="container" style="display: flex; align-items: center; justify-content: center; justify-items: center; flex-direction: column; padding: 100px;">
             <img style="text-align:  center; justify-content:center;" src="images/dancing-person.gif" alt="dancingGIF">
-            <h2 class="text-center text-uppercase">404</h2>
             <br>
-            <h3 class="text-center text-uppercase">nie ma takiego tańca</h3>
-            <p class="text-center w-75 m-auto"> Ani strony :(</p>
+            <br>
+            <h2 class="text-center text-uppercase">Pracuję nad sekcją aktualności!</h2>
+            <br>
+            <br>
+            <h3 class="text-center text-uppercase">Już niedługo...</h3>
+            <p class="text-center w-75 m-auto"> Na stronie pojawią się wpisy :)</p>
             <br>
             <a class="btn btn-outline-dark" href="index.html">Powrót</a>
         </div>
