--- a/contact.html
+++ b/contact.html
@@ -7,125 +7,120 @@
     <title>Siedlecka Szkoła Tańca Towarzyskiego</title>
     <meta name="description" content="Skontaktuj się z nami i zapisz się na kurs!">
     <link rel="stylesheet" href="styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+            crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="images/ikona.png">
 </head>
 <body>
-  <nav id="nav" class="navbar navbar-expand-lg navbar-light bg-lightg">
-    <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"><img src="" alt=""></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a  class="nav-link" href="index.html">Strona Główna</a>
-          </li>
-          <li class="nav-item">
-            <a  class="nav-link" href="https://www.facebook.com/Taniec.Siedlce/">Aktualności</a>
-          </li>
-          <li class="nav-item">
-            <a  class="nav-link" href="about.html">O nas</a>
-          </li>
-          <li class="nav-item">
-            <a id="delink" class="nav-link" href="pricing.html">Cennik</a>
-          </li>
-          <li class="nav-item">
-            <a id="delink" class="nav-link" href="pricing.html">Grafik</a>
-          </li>
-          <li class="nav-item">
-            <a id="delink" class="nav-link" href="pricing.html">Karta Podarunkowa</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Kontakt</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Zapisy</a>
-          </li>
+<section id="sideNav">
+    <nav>
+        <ul>
+            <li></li>
+            <li><a class="nav__link" href="index.html">Początek</a></li>
+            <li><a class="nav__link" href="about.html">O Nas</a></li>
+            <li><a class="nav__link" href="blog.html">Blog</a></li>
+            <li><a class="nav__link" href="pricing.html">Cennik</a></li>
+            <li><a class="nav__link" href="contact.html">Kontakt</a></li>
         </ul>
-      </div>
+    </nav>
+    <div id="menubtn">
+        <img src="images/menu.svg" id="menu" alt="hamburger-menu">
     </div>
+</section>
+
+<nav class="nav nav-desktop">
+    <a class="nav__link" href="index.html">Strona główna</a>
+    <a class="nav__link" href="about.html">O nas</a>
+    <a class="nav__link" href="blog.html">Aktualności</a>
+    <a class="nav__link" href="pricing.html">Cennik-Grafik-Karta-Podarunkowa</a>
+    <a class="nav__link" href="contact.html">Kontakt-Zapisy</a>
 </nav>
 
-    <section id="contact">
-        <div class="container">
-            <h3 class="text-center text-uppercase">Skontaktuj się z nami i zapisz się na kurs!</h3>
-            <hr>
-            <p class="text-center w-75 m-auto"></p>
-            <div id = "details" class="row" style="text-decoration: italic;">
-              <article class="col-12 col-lg-4">
-                  <img height = "50px" width="50px" src="images/iconmonstr-phone-8-120.png" alt="ikonka" title="ikonka">
-                  <h2 >Numer Kontaktowy</h2>
-                  <a  href="tel:601991189 " style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-style: italic; color: black; text-decoration: none;"> 
-                    601 991 189 
-                  </a>
 
-              </article>
-  
-              <article class="col-12 col-lg-4">
-                  <img height = "50px" width="50px" src="images/iconmonstr-paper-plane-7-120.png" alt="ikonka" title="ikonka">
-                  <h2>E - MAIL</h2>
-                  <p style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-style: italic;">
-                     taniecsiedlce@gmail.com
-                  </p>
-              </article>
-  
-              <article class="col-12 col-lg-4">
-                  <img height = "50px" width="50px" src="images/iconmonstr-navigation-9-120.png" alt="ikonka" title="ikonka">
-                  <h2>Adres</h2>
-                  <p style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-style: italic;">
+<section id="contact">
+    <div class="container">
+        <h3 class="text-center text-uppercase">Skontaktuj się z nami i zapisz się na kurs!</h3>
+        <hr>
+        <p class="text-center w-75 m-auto"></p>
+        <div id="details" class="row" style="text-decoration: italic;">
+            <article class="col-12 col-lg-4">
+                <img height="50px" width="50px" src="images/iconmonstr-phone-8-120.png" alt="ikonka" title="ikonka">
+                <h2>Numer Kontaktowy</h2>
+                <a href="tel:601991189 "
+                   style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-style: italic; color: black; text-decoration: none;">
+                    601 991 189
+                </a>
+            </article>
+            <article class="col-12 col-lg-4">
+                <img height="50px" width="50px" src="images/iconmonstr-paper-plane-7-120.png" alt="ikonka"
+                     title="ikonka">
+                <h2>E - MAIL</h2>
+                <p style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-style: italic;">
+                    taniecsiedlce@gmail.com
+                </p>
+            </article>
+            <article class="col-12 col-lg-4">
+                <img height="50px" width="50px" src="images/iconmonstr-navigation-9-120.png" alt="ikonka"
+                     title="ikonka">
+                <h2>Adres</h2>
+                <p style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-style: italic;">
                     Siedlce, DH Olimp, ul. Sokołowska 47, III piętro,<br>
                     Węgrów, Węgrowski Ośrodek Kultury, ul. Mickiewicza 4<br>
-
-                  </p>
-              </article>
-
-                <form action="POST" data-netlify="true">
-                  <div class="half">
+                </p>
+            </article>
+            <form action="POST" data-netlify="true">
+                <div class="half">
                     <div class="item">
-                      <label for="name">IMIĘ</label>
-                      <input name="IMIĘ" placeholder="Twoje Imię" type="text" id = "first_name">
+                        <label for="name">IMIĘ</label>
+                        <input name="IMIĘ" placeholder="Twoje Imię" type="text" id="first_name">
                     </div>
                     <div class="item">
-                      <label for="surname">NAZWISKO</label>
-                      <input name="NAZWISKO" placeholder="Twoje Nazwisko" type="text" id = "surname">
+                        <label for="surname">NAZWISKO</label>
+                        <input name="NAZWISKO" placeholder="Twoje Nazwisko" type="text" id="surname">
                     </div>
-                  </div>
-                  <div class="half2">
+                </div>
+                <div class="half2">
                     <div class="item">
-                      <label for="phone">TELEFON</label>
-                      <input name="NUMER TELEFONU" placeholder="Twój Numer Telefonu" type="text" id = "phone">
+                        <label for="phone">TELEFON</label>
+                        <input name="NUMER TELEFONU" placeholder="Twój Numer Telefonu" type="text" id="phone">
                     </div>
                     <div class="item">
-                      <label for="email">EMAIL</label>
-                      <input name="EMAIL" placeholder="Twój E - MAIL" type="text" id = "email">
+                        <label for="email">EMAIL</label>
+                        <input name="EMAIL" placeholder="Twój E - MAIL" type="text" id="email">
                     </div>
-                  </div>
-                  <div class="full">
+                </div>
+                <div class="full">
                     <label for="message">WIADOMOŚĆ</label>
-                    <textarea placeholder="Twoja Wiadomość" name="Wiadomość" id = "message"></textarea>
-                  </div>
-                  <div class="field">
-                    <div data-netlify-recaptcha="true" class="p-3 d-flex justify-content-center" style="text-align: center;"></div>
-                  </div>
-                    <input class="btn btn-outline-dark" type="submit" value = "Wyślij" name="Submit"></input>
-                </form>
-          </div>
+                    <textarea placeholder="Twoja Wiadomość" name="Wiadomość" id="message"></textarea>
+                </div>
+                <div class="field">
+                    <div data-netlify-recaptcha="true" class="p-3 d-flex justify-content-center"
+                         style="text-align: center;"></div>
+                </div>
+                <input class="btn btn-outline-dark" type="submit" value="Wyślij" name="Submit"></input>
+            </form>
         </div>
-     </section>
-     <footer class="text-center text-white" style="background-color:white;">
-      <div class="container p-4">
+    </div>
+</section>
+<footer class="text-center text-white" style="background-color:white;">
+    <div class="container p-4">
         <section class="mb-4">
-          <a class="btn btn-outline-dark btn-floating m-1" href="https://www.youtube.com/c/MarekGlinka" role="button"><img alt="icon-yt" src="images/yt.png"></img></i></a>
-          <a class="btn btn-outline-dark btn-floating m-1" href="https://www.facebook.com/Taniec.Siedlce/" role="button"><img alt="icon-fb" src="images/facebook.png"></img></a>
-          <a class="btn btn-outline-dark btn-floating m-1" href="https://www.instagram.com/taniec_siedlce/" role="button"><img alt="icon-insta" src="images/instagram.png"></img></a>
+            <a class="btn btn-outline-dark btn-floating m-1" href="https://www.youtube.com/c/MarekGlinka" role="button"><img
+                    alt="icon-yt" src="images/yt.png"></img></i></a>
+            <a class="btn btn-outline-dark btn-floating m-1" href="https://www.facebook.com/Taniec.Siedlce/"
+               role="button"><img alt="icon-fb" src="images/facebook.png"></img></a>
+            <a class="btn btn-outline-dark btn-floating m-1" href="https://www.instagram.com/taniec_siedlce/"
+               role="button"><img alt="icon-insta" src="images/instagram.png"></img></a>
         </section>
-      <div class="bg-dark text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-        <p>© GlinkaArt</p>
-      </div>
-  </footer>
-
-
+    </div>
+</footer>
+<div class="bg-dark text-center" style="background-color: rgba(0, 0, 0, 0.2);">
+    <p class="p-3">© <span class="footer__year"></span> GlinkaArt | <a href="https://jakubradomyski.me/"
+                                                                       class="text-light btn-outline-light">JR</a></p>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
