Footer full-width change

--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
     </div>
 </footer>
 <div class="bg-dark text-center" style="background-color: rgba(0, 0, 0, 0.2);">
-    <p class="p-3">© <span class="footer__year"></span> GlinkaArt | <a href="https://jakubradomyski.me/"
+    <p id="compName" class="p-3">© <span class="footer__year"></span> GlinkaArt | <a href="https://jakubradomyski.me/"
                                                                        class="text-light btn-outline-light">JR</a></p>
 </div>
 <script src="script.js"></script>
