Services blog link

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             nowych wydarzeniach
                         <p style="color:azure">.</p> </p>
                         <div class="mt-3">
-                            <a href="https://www.facebook.com/Taniec.Siedlce" class="text-custom">Aktualności<i
+                            <a href="blog.html" class="text-custom">Aktualności<i
                                     class="mdi mdi-chevron-right"></i></a>
                         </div>
                     </div>
