--- a/about.html
+++ b/about.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,7 +15,6 @@
             crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="images/ikona.png">
 </head>
-
 <body>
 <section id="sideNav">
     <nav>
@@ -33,7 +31,6 @@
         <img src="images/menu.svg" id="menu" alt="hamburger-menu">
     </div>
 </section>
-
 <nav class="nav nav-desktop">
     <a class="nav__link" href="index.html">Strona główna</a>
     <a class="nav__link" href="about.html">O nas</a>
@@ -41,8 +38,6 @@
     <a class="nav__link" href="pricing.html">Cennik-Grafik-Karta-Podarunkowa</a>
     <a class="nav__link" href="contact.html">Kontakt-Zapisy</a>
 </nav>
-
-
 <header class="py-5">
     <div class="container px-5">
         <div class="row justify-content-center">
@@ -64,8 +59,7 @@
         </div>
     </div>
 </header>
-
-<section class="py-5 bg-light" id="scroll-target">
+<section class="py-5 bg-light">
     <div class="container px-5 my-5">
         <div class="row gx-5 align-items-center">
             <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="images/IMG_8109.jpg" alt="..."/>
@@ -91,7 +85,6 @@
         </div>
     </div>
 </section>
-
 <section class="py-5">
     <div class="container px-5 my-5">
         <div class="row gx-5 align-items-center">
@@ -122,8 +115,7 @@
         </div>
     </div>
 </section>
-
-<section class="py-5 bg-light" id="scroll-target">
+<section class="py-5 bg-light">
     <div class="container px-5 my-5">
         <div class="row gx-5 align-items-center">
             <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="images/IMG_8138.jpg" alt="..."/>
@@ -146,7 +138,6 @@
         </div>
     </div>
 </section>
-
 <section class="py-5">
     <div class="container px-5 my-5">
         <div class="row gx-5 align-items-center">
@@ -165,8 +156,6 @@
         </div>
     </div>
 </section>
-
-
 <footer class="text-center text-white" style="background-color:white;">
     <div class="container p-4">
         <section class="mb-4">
@@ -181,11 +170,9 @@
 </footer>
 <div class="bg-dark text-center" style="background-color: rgba(0, 0, 0, 0.2);">
     <p id="compName" class="p-3">© <span class="footer__year"></span> GlinkaArt | <a href="https://jakubradomyski.me/"
-                                                                       class="text-light btn-outline-light">JR</a></p>
+                                                                                     class="text-light btn-outline-light">JR</a>
+    </p>
 </div>
-
-<script src="menu.js"></script>
 <script src="script.js"></script>
-
 </body>
 </html>
