--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
         <h3 class="text-center text-uppercase">Skontaktuj się z nami i zapisz się na kurs!</h3>
         <hr>
         <p class="text-center w-75 m-auto"></p>
-        <div id="details" class="row" style="text-decoration: italic;">
+        <div id="details" class="row">
             <article class="col-12 col-lg-4">
                 <img height="50px" width="50px" src="images/iconmonstr-phone-8-120.png" alt="ikonka" title="ikonka">
                 <h2>Numer Kontaktowy</h2>
@@ -119,7 +119,8 @@
 </footer>
 <div class="bg-dark text-center" style="background-color: rgba(0, 0, 0, 0.2);">
     <p id="compName" class="p-3">© <span class="footer__year"></span> GlinkaArt | <a href="https://jakubradomyski.me/"
-                                                                       class="text-light btn-outline-light">JR</a></p>
+                                                                                     class="text-light btn-outline-light">JR</a>
+    </p>
 </div>
 <script src="script.js"></script>
 </body>
