--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
     <h1 class="display-2">Siedlecka Szkoła Tańca Towarzyskiego </h1>
     <h1 class="display-2 awesome_p">Marka Glinki</h1>
     <br>
-    <a href="#services"><img class="display-6 arrow" src="images/arrowupsidedown.png" alt="..."
+    <a href="#arrowLink"><img class="display-6 arrow" src="images/arrowupsidedown.png" alt="..."
                              style="width: 100px; height:100px;"></a>
 </section>
 <br>
 
-<section id="services">
+<section id="arrowLink" class="services">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12">
@@ -66,7 +66,6 @@
         <div class="row">
             <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
                 <div class="card-service-wrapper rounded border-0 shadow p-4">
-
                     <div class="content mt-4">
                         <h2 class="title">Zobacz nasze kursy i efekty!</h2>
                         <p class="text-muted mt-3 mb-0">Wybierz swój taniec i sprawdź aktualności, by dowiedzieć o
@@ -77,10 +76,8 @@
                                     class="mdi mdi-chevron-right"></i></a>
                         </div>
                     </div>
-
                 </div>
             </div>
-
             <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
                 <div class="card-service-wrapper rounded border-0 shadow p-4">
                     <div class="content mt-4">
@@ -89,13 +86,12 @@
                             poziom nauczania! </p>
                         <br>
                         <div class="mt-3">
-                            <a href="pricing.html" class="text-custom">Cennik/Grafik<i
+                            <a href="pricing.html" class="text-custom">Cennik-Grafik<i
                                     class="mdi mdi-chevron-right"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
-
             <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
                 <div class="card-service-wrapper rounded border-0 shadow p-4">
                     <div class="content mt-4">
@@ -115,7 +111,6 @@
         </div>
     </div>
 </section>
-
 <section id="onlyus">
     <div class="container px-4">
         <div class="row gx-4 justify-content-center">
@@ -128,7 +123,6 @@
         </div>
     </div>
 </section>
-
 <section>
     <section class="scroll" id="scroll">
         <div class="container px-5">
@@ -162,7 +156,8 @@
                 <div class="col-lg-6">
                     <div class="p-1">
                         <h2 class="display-4">Dla par i singli...</h2>
-                        <p>Umiejętności nabyte na kursie pozwolą Ci poczuć się znacznie swobodniej i atrakcyjniej na
+                        <p>
+                            Umiejętności nabyte na kursie pozwolą Ci poczuć się znacznie swobodniej i atrakcyjniej na
                             każdej imprezie tanecznej. W szybki i efektowny sposób rozruszasz całe ciało i nabierzesz
                             pewności siebie na parkiecie.
                             Nauka podstawowych kroków i figur tanecznych zarówno tańców latynoamerykańskich jak i
@@ -173,7 +168,8 @@
                             pragnącą poznawać ciekawych ludzi, którzy chcą spędzić kilka wieczorów w tanecznym rytmie?
                             Jeśli chcesz poznać nowe osoby i razem bawić się, poznając kroki łagodnego Walca, gorącej
                             Salsy, wreszcie pełnego erotyzmu Tanga, zapraszamy na Kurs Tańca Towarzyskiego dla
-                            SINGLI!</p>
+                            SINGLI!
+                        </p>
                     </div>
                 </div>
             </div>
@@ -188,13 +184,15 @@
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-1">
                         <h2 class="display-4">Lekcje Indywidualne</h2>
-                        <p>Indywidualne lekcje tańca adresowane są do osób, które nie mogą lub nie chcą uczestniczyć w
+                        <p>
+                            Indywidualne lekcje tańca adresowane są do osób, które nie mogą lub nie chcą uczestniczyć w
                             grupowych zajęcia kursu. Program zajęć dostosowany jest do oczekiwań uczestników - uczone są
                             wszystkie lub tylko wybrane tańce. Prywatne lekcje tańca umożliwią Wam naukę dowolnie
                             wybranego tańca. Nauka tańca pozwoli Wam opanować wybrany taniec lub grupę tańców w sposób
                             możliwie optymalny. To Wy decydujecie z jaką intensywnością będziecie się uczyć, czy będzie
                             to jedna lekcja, czy kilka, raz w tygodniu czy codziennie. Program zajęć dostosowany jest
-                            tylko do Was, do Waszego tempa nauki co czyni naukę tańca wielce efektywną..</p>
+                            tylko do Was, do Waszego tempa nauki co czyni naukę tańca wielce efektywną.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -209,10 +207,12 @@
                 <div class="col-lg-6">
                     <div class="p-1">
                         <h2 class="display-4">Dla Dzieci</h2>
-                        <p>Zajęcia prowadzone z myślą o najmłodszych, które na zajęciach ćwiczą nie tylko kroki, lecz
+                        <p>
+                            Zajęcia prowadzone z myślą o najmłodszych, które na zajęciach ćwiczą nie tylko kroki, lecz
                             także poprawiają swoją sprawność ruchową, koordynację, muzykalność oraz przełamują barierę
                             wstydu. To najlepsza inwestycja w rozwój młodego człowieka, która z pewnością
-                            zaprocentuje.</p>
+                            zaprocentuje.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -228,11 +228,13 @@
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-1">
                         <h2 class="display-4">Ladies Latino Solo</h2>
-                        <p>Zapisz się na Ladies Latino Solo. Są to zajęcia stworzone specjalnie dla kobiet. Gorące rytmy
+                        <p>
+                            Zapisz się na Ladies Latino Solo. Są to zajęcia stworzone specjalnie dla kobiet. Gorące rytmy
                             muzyki latynoamerykańskiej sprawią, że nogi same porwą Cię do tańca! Skorygujesz postawę,
                             usprawnisz całe ciało, uwolnisz się od kompleksów i nieśmiałości, a Twoje ruchy nabiorą
                             wdzięku i seksapilu.
-                            Kurs skierowany jest do wszystkich kobiet niezależnie od wieku.</p>
+                            Kurs skierowany jest do wszystkich kobiet niezależnie od wieku.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -247,14 +249,16 @@
                 <div class="col-lg-6">
                     <div class="p-1">
                         <h2 class="display-4">DLA SENIORÓW 60+</h2>
-                        <p>Taniec to także forma terapii i środek antydepresyjny. Dlatego jest świetną formą aktywności
+                        <p>
+                            Taniec to także forma terapii i środek antydepresyjny. Dlatego jest świetną formą aktywności
                             fizycznej dla seniorów. Nie patrz w kalendarz i nie poddawaj się ogólnie panującej opinii,
                             że taniec jest zarezerwowany tylko dla młodych.
                             Taniec jest jednym ze środków terapeutycznych. Znacznie przyjemniejszym i zdrowszym, niż
                             zażywanie lekarstw. Medycyna wykorzystuje go jako pomoc w walce z chorobami. Jest też
                             niezwykle skutecznym lekiem przedłużającym młodość osób starszych.
                             Tańczyć może każdy, bez względu na wiek i stopień sprawności. Ćwiczenia na miarę własnych
-                            możliwości fizycznych przynoszą maksimum efektu.</p>
+                            możliwości fizycznych przynoszą maksimum efektu.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -271,7 +275,8 @@
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-1">
                         <h2 class="display-4">Oferta dla firm</h2>
-                        <p>Chcecie zbudować silny i dynamiczny zespół? Zbudować bliskie relacje między pracownikami?
+                        <p>
+                            Chcecie zbudować silny i dynamiczny zespół? Zbudować bliskie relacje między pracownikami?
                             Proponujemy zajęcia taneczne. Poprzez wyjątkowe i niepowtarzalną formę ruchu zwiększy się
                             motywacja i produktywność, obniży poziom stresu, spowoduje wzrost odporności.
                             Zapraszamy do Siedleckiej Szkoły Tańca miejsca w którym Państwa pracownicy zrelaksuję się,
@@ -285,12 +290,12 @@
     </section>
 </section>
 
-<section id="services">
+<section class="services">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12">
                 <div class="section-title text-center mb-4 pb-2">
-                    <h1 class="title mb-4 display-3 text-danger">Szukaliście w wyszukiwarce tych tańców? </h1>
+                    <h1 class="title mb-4 display-3 text-danger">Szukaliście w wyszukiwarce tych tańców?</h1>
                 </div>
             </div>
         </div>
@@ -499,9 +504,9 @@
 </footer>
 <div class="bg-dark text-center" style="background-color: rgba(0, 0, 0, 0.2);">
     <p id="compName" class="p-3">© <span class="footer__year"></span> GlinkaArt | <a href="https://jakubradomyski.me/"
-                                                                       class="text-light btn-outline-light">JR</a></p>
+                                                                                     class="text-light btn-outline-light">JR</a>
+    </p>
 </div>
-
 <script src="script.js"></script>
 </body>
 </html>
