--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/b8bb6b22d8.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="images/ikona.png">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 
 <body>
