sidebar li element refactor

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
             <li></li>
             <li><a class="nav__link" href="index.html">Początek</a></li>
             <li><a class="nav__link" href="about.html">O Nas</a></li>
-            <li><a class="nav__link" href="blog.html">Blog</a></li>
+            <li><a class="nav__link" href="blog.html">Aktualności</a></li>
             <li><a class="nav__link" href="pricing.html">Cennik</a></li>
             <li><a class="nav__link" href="contact.html">Kontakt</a></li>
         </ul>
@@ -34,6 +34,7 @@
         <img src="images/menu.svg" id="menu" alt="hamburger-menu">
     </div>
 </section>
+
 <nav class="nav nav-desktop">
     <a class="nav__link" href="index.html">Strona główna</a>
     <a class="nav__link" href="about.html">O nas</a>
