--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
             <li></li>
             <li><a class="nav__link" href="index.html">Początek</a></li>
             <li><a class="nav__link" href="about.html">O Nas</a></li>
-            <li><a class="nav__link" href="blog.html">Blog</a></li>
+            <li><a class="nav__link" href="blog.html">Aktualności</a></li>
             <li><a class="nav__link" href="pricing.html">Cennik</a></li>
             <li><a class="nav__link" href="contact.html">Kontakt</a></li>
         </ul>
