--- a/blog.html
+++ b/blog.html
@@ -1,30 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Siedlecka Szkoła Tańca Towarzyskiego</title>
-    <meta name="description" content="404">
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="icon" type="image/png" href="images/ikona.png">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-</head>
-<body>
-    <section id="contact">
-        <div class="container" style="display: flex; align-items: center; justify-content: center; justify-items: center; flex-direction: column; padding: 100px;">
-            <img style="text-align:  center; justify-content:center;" src="images/dancing-person.gif" alt="dancingGIF">
-            <br>
-            <br>
-            <h2 class="text-center text-uppercase">Pracuję nad sekcją aktualności!</h2>
-            <h3 class="text-center text-uppercase">Już niedługo...</h3>
-            <p class="text-center w-75 m-auto"> Na stronie pojawią się wpisy :)</p>
-            <br>
-            <a class="btn btn-outline-dark" href="index.html">Powrót</a>
-        </div>
-    </section>
-</body>
-</html>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <meta http-equiv="X-UA-Compatible" content="IE=edge">-->
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+<!--    <title>Siedlecka Szkoła Tańca Towarzyskiego</title>-->
+<!--    <meta name="description" content="404">-->
+<!--    <link rel="stylesheet" href="styles.css">-->
+<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">-->
+<!--    <link rel="icon" type="image/png" href="images/ikona.png">-->
+<!--    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">-->
+<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"-->
+<!--          integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">-->
+<!--</head>-->
+<!--<body>-->
+<!--    <section id="contact">-->
+<!--        <div class="container" style="display: flex; align-items: center; justify-content: center; justify-items: center; flex-direction: column; padding: 100px;">-->
+<!--            <img style="text-align:  center; justify-content:center;" src="images/dancing-person.gif" alt="dancingGIF">-->
+<!--            <br>-->
+<!--            <br>-->
+<!--            <h2 class="text-center text-uppercase">Pracuję nad sekcją aktualności!</h2>-->
+<!--            <h3 class="text-center text-uppercase">Już niedługo...</h3>-->
+<!--            <p class="text-center w-75 m-auto"> Na stronie pojawią się wpisy :)</p>-->
+<!--            <br>-->
+<!--            <a class="btn btn-outline-dark" href="index.html">Powrót</a>-->
+<!--        </div>-->
+<!--    </section>-->
+<!--</body>-->
+<!--</html>-->
